feat: updated code comments and modified the shadow's intensity of light theme.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,8 +19,8 @@
                   - To add a new example:
                     1) Add a button here with data-example="yourkey"
                     2) Add a matching <div class="code-example" id="example-yourkey"> below.
-                    3) Define a Hugo variable with backticks (e.g., $yourCode := `...`) and render with
-                       {{ highlight $yourCode "objectpascal" "linenos=false" }}
+                    3) Define a Hugo variable with backticks and render with appropriate options
+
                   - The tab switching is implemented in JS inside layouts/_default/baseof.html.
                 -->
                 <div class="code-selector">
